# ssh-runner

./: CMakeLists.txt
krunner-ssh/: CMakeLists.txt  ssh.cpp  ssh.h
